# AI-Genotype-Benchmark

./: .gitignore  README.md  bootstrap.sh  results_summary.md  run_tests.sh
genotype_crontab_clone_1/: README.md  main.py  pyproject.toml  requirements.txt
genotype_crontab_clone_1/domain/scheduler/core/: job.py  scheduler_service.py
genotype_crontab_clone_1/domain/scheduler/core/adaptors/: http_adaptor.py  i_http_adaptor.py  i_web_ui_adaptor.py  web_ui_adaptor.py
genotype_crontab_clone_1/domain/scheduler/core/ports/: i_job_executor.py  i_job_repository.py  in_memory_job_repository.py  sqlite_job_repository.py  subprocess_job_executor.py
genotype_crontab_clone_1/fixtures/expected/scheduler/v1/: job.create.0.0.1.json  job.list.0.0.1.json  job.run_history.0.0.1.json
genotype_crontab_clone_1/fixtures/raw/scheduler/v1/: job.create.request.0.0.1.json  job.create.response.0.0.1.json  job.list.response.0.0.1.json  job.run_history.response.0.0.1.json
genotype_crontab_clone_1/tests/scheduler/: test_adaptors.py  test_core.py  test_ports.py  test_sqlite_port.py  test_web_ui_adaptor.py
genotype_crontab_clone_2/: README.md  main.py  pyproject.toml  requirements.txt
genotype_crontab_clone_2/domain/scheduler/adaptors/: i_scheduler_adaptor.py  i_web_ui_adaptor.py  rest_adaptor.py  web_ui_adaptor.py
genotype_crontab_clone_2/domain/scheduler/core/: commands.py  job.py  run_record.py
genotype_crontab_clone_2/domain/scheduler/ports/: i_job_repository.py  in_memory_job_repository.py  sqlite_job_repository.py
genotype_crontab_clone_2/fixtures/expected/scheduler/v1/: job.0.0.1.json  run_record.0.0.1.json
genotype_crontab_clone_2/fixtures/raw/scheduler/v1/: create_job.0.0.1.json  trigger_job.0.0.1.json
genotype_crontab_clone_2/tests/scheduler/: test_adaptors.py  test_core.py  test_ports.py
genotype_crontab_clone_3/: README.md  main.py  pyproject.toml
genotype_crontab_clone_3/domain/scheduler/core/: job.py  job_run.py  scheduler_service.py
genotype_crontab_clone_3/domain/scheduler/core/adaptors/: i_scheduler_adaptor.py  scheduler_routes.py  ui_routes.py
genotype_crontab_clone_3/domain/scheduler/core/ports/: i_job_repository.py  sqlite_job_repository.py  (+1 more)
genotype_crontab_clone_3/tests/scheduler/: test_adaptors.py  test_core.py  test_ports.py  test_sqlite_ports.py  test_ui_adaptors.py
genotype_tic_tac_toe_1/: README.md  main.py  pyproject.toml
genotype_tic_tac_toe_1/domain/core/: game_logic.py  models.py
genotype_tic_tac_toe_1/domain/core/adaptors/: game_service.py  i_game_service.py  routes.py  ui_routes.py
genotype_tic_tac_toe_1/domain/core/ports/: i_game_archive.py  i_game_repository.py  in_memory_repository.py  sqlite_game_archive.py
genotype_tic_tac_toe_1/schemas/: game_state.json
genotype_tic_tac_toe_1/tests/game/: test_adaptors.py  test_core.py  test_ports.py  test_sqlite_port.py  test_ui_routes.py
genotype_tic_tac_toe_2/: README.md  main.py  pyproject.toml
genotype_tic_tac_toe_2/domain/game/: completed_game.py  game.py  game_service.py
genotype_tic_tac_toe_2/domain/game/adaptors/: i_game_controller.py  i_web_ui_controller.py  rest_controller.py  web_ui_controller.py
genotype_tic_tac_toe_2/domain/game/ports/: i_game_archive.py  i_game_repository.py  in_memory_repository.py  sqlite_game_archive.py
genotype_tic_tac_toe_2/tests/game/: test_adaptors.py  test_adaptors_web_ui.py  test_core.py  test_ports.py  test_ports_archive.py
genotype_tic_tac_toe_3/: README.md  main.py  pyproject.toml
genotype_tic_tac_toe_3/domain/game/core/: game_service.py  models.py
genotype_tic_tac_toe_3/static/: index.html
genotype_tic_tac_toe_3/tests/game/: test_adaptors.py  test_core.py  test_ports.py  test_sqlite_archive.py  test_web_ui.py
genotype_ui_dashboard_1/: README.md  main.py  pyproject.toml  requirements.txt
genotype_ui_dashboard_1/docs/: architecture.md
genotype_ui_dashboard_1/domain/core/: commands.py  models.py
genotype_ui_dashboard_1/domain/core/adaptors/: fastapi_router.py  i_metrics_dashboard_adaptor.py  i_web_ui_adaptor.py  web_ui_router.py
genotype_ui_dashboard_1/domain/core/ports/: i_dashboard_repository.py  i_metric_value_repository.py  i_widget_repository.py  in_memory_dashboard_repository.py  in_memory_metric_value_repository.py  in_memory_widget_repository.py  sqlite_dashboard_repository.py  sqlite_metric_value_repository.py  sqlite_widget_repository.py
genotype_ui_dashboard_1/tests/dashboard/: test_adaptors.py  test_core.py  test_ports.py  test_sqlite_ports.py  test_web_ui_adaptors.py
genotype_ui_dashboard_2/: README.md  main.py  pyproject.toml  requirements.txt
genotype_ui_dashboard_2/domain/dashboard/core/: commands.py  models.py
genotype_ui_dashboard_2/tests/dashboard/: test_adaptors.py  test_core.py  test_ports.py  test_sqlite_port.py  test_web_ui_adaptor.py
genotype_ui_dashboard_3/: README.md  main.py  pyproject.toml  requirements.txt
genotype_ui_dashboard_3/domain/dashboard/core/: models.py
genotype_ui_dashboard_3/schemas/: dashboard.json
genotype_ui_dashboard_3/tests/dashboard/: test_adaptors.py  test_core.py  test_ports.py  test_sqlite_ports.py  test_ui_adaptor.py
(+134 files in other folders)
