[project]
name = "genotype-tic-tac-toe-3"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[tool.black]
# Exclude aligned-column formatting files from auto-formatter per ADR 0006
exclude = '''
/(
    domain/game/core/models\.py
  | domain/game/core/adaptors/api_schemas\.py
  | domain/game/core/adaptors/rest_controller\.py
  | domain/game/core/ports/sqlite_game_archive\.py
)/
'''
